# gal3d

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  README_cn.md  pyproject.toml  setup.py
.VSCodeCounter/2025-05-11_22-16-29/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml
.tools/: _log_utils.py  clean_build_artifacts.py  generate_plugin_stubs.py
docs/: Makefile  example_TNG50.ipynb
docs/locales/en/LC_MESSAGES/: details.mo  details.po  history.po  index.mo  index.po  reference.po  tutorials.mo  tutorials.po
docs/locales/zh_CN/LC_MESSAGES/: details.po  history.po  index.mo  index.po  reference.mo  reference.po  tutorials.mo  tutorials.po
docs/source/: conf.py  gen_api.sh  index.rst
docs/source/_static/: gal3d.css
docs/source/_static/data/: monotonic_ray_xy.npz
docs/source/_templates/apidoc/: package.rst.jinja
docs/source/_templates/autosummary/: class.rst  function.rst  module.rst
docs/source/details/: density_estimation.ipynb  generalized_ellipsoid.ipynb  index.rst  monotonic_ray.ipynb  spherical_sampling.ipynb
docs/source/history/: index.rst
docs/source/reference/: index.rst
docs/source/reference/_autosummary/: gal3d.analyzer.Gal3DAnalyzer.rst  gal3d.analyzer.ell_condition.rst  gal3d.analyzer.get_ell_structure.rst  gal3d.analyzer.rst  gal3d.analyzer.validate_fitting_data.rst  gal3d.analyzer.validation_condition.rst  gal3d.characterization.characterizer.Characterizer.rst  gal3d.characterization.characterizer.CharacterizerBase.rst  gal3d.characterization.characterizer.rst  gal3d.characterization.characterizer_plugins.galaxy_bar.Bar.rst  gal3d.characterization.characterizer_plugins.galaxy_bar.rst  gal3d.characterization.characterizer_plugins.rst  gal3d.characterization.rst  gal3d.field.rst  gal3d.field.spherical_field.field.SphField.rst  gal3d.field.spherical_field.field.bound_dist.rst  gal3d.field.spherical_field.field.bound_pct.rst  gal3d.field.spherical_field.field.bound_value.rst  gal3d.field.spherical_field.field.rst  gal3d.field.spherical_field.field.step_lin.rst  gal3d.field.spherical_field.field.step_log.rst  gal3d.field.spherical_field.ray.MonotonRay.rst  gal3d.field.spherical_field.ray.judge_monoton.rst  gal3d.field.spherical_field.ray.lu_mono_cy.LU_Mono.rst  gal3d.field.spherical_field.ray.lu_mono_cy.MyPchipInterpolator.rst  gal3d.field.spherical_field.ray.lu_mono_cy.rst  gal3d.field.spherical_field.ray.rst  gal3d.field.spherical_field.rst  gal3d.field.spherical_field.spherical_harmonic.rst  gal3d.field.spherical_field.spherical_harmonic.spherical_harmonics_dec.rst  gal3d.field.spherical_field.spherical_harmonic.spherical_harmonics_in_real.rst  gal3d.field.spherical_field.spherical_vector.SphVector.rst  gal3d.field.spherical_field.spherical_vector.rst  gal3d.field.spherical_field.util.rst  gal3d.field.spherical_field.util_cy.fibonacci_sampling.rst  gal3d.field.spherical_field.util_cy.iso_profile_by_moi.rst  gal3d.field.spherical_field.util_cy.iso_profile_by_pair.rst  gal3d.field.spherical_field.util_cy.rst  gal3d.optimization.optimizer.Optimizer.rst  gal3d.optimization.optimizer.OptimizerBase.rst  (+209 more)
docs/source/tutorials/: advanced_tutorials.rst  configuration.rst  deeper_dives.rst  index.rst  parameters.ipynb  particles.ipynb
src/gal3d/: __init__.py  _info.py  _plugins.py  analyzer.py  config.py  configuration.py  default_config.ini  density.py  executor.py  gal3d_main.py  log.py  plugin.py  plugins.json  run_config.ini
src/gal3d/characterization/: __init__.py  characterizer.py  characterizer.pyi  galaxy_bar.py
src/gal3d/characterization/characterizer_plugins/: __init__.py  galaxy_bar.py  galaxy_disk.py  segment.py
src/gal3d/field/: __init__.py
src/gal3d/field/grid/: cartesian_grid.py  util.py
src/gal3d/field/spherical_field/: __init__.py  field.py  spherical_harmonic.py  spherical_iterator.py  spherical_vector.py  util.py  util_cy.pyi  util_cy.pyx  util_nb.py
src/gal3d/fit_workflow/: __init__.py  fit_workflow.py
src/gal3d/fit_workflow/fit_workflow_plugins/: __init__.py  ellipsoid_fit.py
src/gal3d/fitting/: optimizer.py  parameter.py  result.py  util.py
src/gal3d/model_workflow/: __init__.py  error_workflow.py  error_workflow.pyi  fit_workflow.py  fit_workflow.pyi
src/gal3d/optimization/: __init__.py  model_io.py  model_io.pyi  optimizer.py  optimizer.pyi  parameter.py  result.py  resultplot.py  util.py
src/gal3d/point/: __init__.py  density_estimator.py  density_estimator.pyi  global_calculator.py  util.py  util_cy.pyi  util_cy.pyx  util_nb.py
src/gal3d/preprocess/: processor.py
src/gal3d/preprocessing/: processor.py
src/gal3d/shape/: __init__.py  coordinate.py  coordinate.pyi  fns.py  fns_cy.pyx  fns_nb.py  geometry.py  geometry.pyi  minimize_func.py  structure_main.py  util.py  with_parameter.py
src/gal3d/structure/: __init__.py  minimize_fn.py  structure_main.py  util.py
src/gal3d/theoretical/: __init__.py
src/gal3d/util/: __init__.py  array_operate.py  array_operate_cy.pyi  array_operate_cy.pyx  array_operate_nb.py  error_handling.py  errors.py  func_cache.py  func_decorator.py  func_signature.py  string_format.py  thread_optimizer.py
src/gal3d/visualization/: __init__.py  data_model_residual.py  hist2d.py  los_integr.py  model_projector.py  model_projector.pyi  render.cpp  render.hpp  render_wrapper.pyi  render_wrapper.pyx  show.py
src/gal3d/visualize/: data_model_residual.py  hist2d.py  visualize_model.py
tests/: analyzer_test.py  conftest.py  field_test.py  final_fit_test.py  parameters_test.py  particle_test.py  particles_test.py  points_test.py  structure_test.py  test_common_usage.py  test_config.py  test_coordinates_plugins.py  test_geometry_plugins.py  test_parameters.py  test_particles.py  test_shape_structures.py  test_theoretical.py  test_utilities.py  visualize_test.py
tests/test_data/: TNG50_ID46_star_particles_float32.npy
(+90 files in other folders)
