[build-system]
requires = ["setuptools", "cython", "numpy>=2,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "gal3d"
version = "1.0.0"
description = "Build galaxy 3D morphology model"
authors = [{name = "Shuai LU", email = "lushuai@stu.xmu.edu.cn"}]
readme = "README.md"
dependencies = [
    "numpy>=2,<3",
    "scipy>=1.15.2,<2.0.0",
    "numba>=0.61.0,<0.62.0",
    "optimagic>=0.5.1,<0.6.0",
    "nlopt>=2.9.1,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "h5py>=3.13.0,<4.0.0",
]
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
gal3d = "gal3d.executor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gal3d" = ["*.pyx", "*.pxd", "plugins.json", "default_config.ini", "run_config.ini"]
